# Gradient-Mapper-Hytale

./: Dockerfile  Gradient Mapper Launcher.lnk  README.md  gradient_mapper.py  pyproject.toml
lib/: batch.py  core.py  files.py  preview.py
project/: .gitignore  Gradient Mapper Launcher.bat  docker-compose.yml
project/lib/: __init__.py
project/web/backend/api/: routes.py
project/web/backend/models/: schemas.py
project/web/backend/services/: gradient_scanner.py  zip_service.py
project/web/frontend/js/components/: progress.js  queue.js
project/web/frontend/js/utils/: escape.js  websocket.js
web/: __init__.py
web/backend/: main.py
web/backend/api/: routes.py  websocket.py
web/backend/services/: job_queue.py
web/frontend/: index.html
web/frontend/css/: styles.css
web/frontend/js/: api.js  app.js
web/frontend/js/components/: gradient-selector.js  preview.js  progress.js  queue.js  upload.js
